--- a/Wednesday.html
+++ b/Wednesday.html
@@ -3,10 +3,10 @@
 <html>
 <head>
   <title>DRESS Syndrome</title>
-  <link rel="stylesheet" href="http://lighthouse.jquerycentral.com/css/blog-grey.css">
+   <link rel="stylesheet" type="text/css" href="Wednesday.css">
 </head>
 <body>
-  <header>
+  <header id="header1">
     <h1>DRESS Syndrome - When eosinophils get scary</h1>
     <img src="./Wednesday_Images/Dress logo.jpg">
   </header>
@@ -17,12 +17,25 @@
       <img src="http://placekitten.com/200/150">
     </header>
     <article>
-      <p>DRESS is a <strong>potentially-fatal</strong>, multi-system reaction characterized by exposure to a possible pharmacologic agent (drug), rash, eosinophilia and systemic symptoms</p>
+      <p id="para1">DRESS is a <strong>potentially-fatal</strong>, multi-system reaction characterized by exposure to a possible pharmacologic agent (drug), rash, eosinophilia and systemic symptoms</p>
       <img src="./Wednesday_Images/Dress cartoon.jpg">
-      <p>The rash is typically morbilliform and then coalesces into diffuse erythematous lesions. By definition, it covers <em>more than 50%</em> body surface area. </p>
+      <p id="para2">The rash is typically morbilliform and then coalesces into diffuse erythematous lesions. By definition, it covers <em>more than 50%</em> body surface area. </p>
       <img src="http://acgcasereports.gi.org/files/2015/01/Akar-Figure-1-Composite.jpg">
       <p>The most commonly implicated drugs are anti-epileptic medications, such as phenobarbital <img src="http://pubs.acs.org/cen/img/83/i25/8325phenobarbital.gif"></p>
+    </article>
+    <article>
       <p>Examples of <span style="color: black;">commonly implicated medications</span></p>
+      <ol>
+        <li>Allopurinol</li>
+        <li>Carbamazepine</li>
+        <li>Lamotrigine</li>
+        <li>Phenytoin</li>
+        <li>Sulfasalazine</li>
+        <li>Vancomycin</li>
+        <li>Minocycline</li>
+        <li>Dapsone</li>
+        <li>Sulfamethoxazole</li>
+      </ol>
     </article>
   </section>
   <section>
